restarted, wanted to make changes to db

--- a/food_db_associations/config/database.yml
+++ b/food_db_associations/config/database.yml
@@ -23,13 +23,13 @@ default: &default
 
 development:
   <<: *default
-  database: food_associations_development
+  database: food_db_associations_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
   # When left blank, postgres will use the default role. This is
   # the same name as the operating system user that initialized the database.
-  #username: food_associations
+  #username: food_db_associations
 
   # The password associated with the postgres role (username).
   #password:
@@ -57,7 +57,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: food_associations_test
+  database: food_db_associations_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: food_associations_production
-  username: food_associations
-  password: <%= ENV['FOOD_ASSOCIATIONS_DATABASE_PASSWORD'] %>
+  database: food_db_associations_production
+  username: food_db_associations
+  password: <%= ENV['FOOD_DB_ASSOCIATIONS_DATABASE_PASSWORD'] %>
